# nu-plugins

./: Cargo.toml  README.md
file_exists/: Cargo.toml
file_exists/src/: main.rs
from_nbt/: Cargo.toml
from_nbt/src/: main.rs
